# AI_Platform

./: .env.example  .gitignore  README.md  pyproject.toml
Agent_News_Letter/: .env.example  .gitignore  README.md  main.py  requirements.txt  setup_scheduler.bat
Agent_News_Letter/agent/: atlas.py  schemas.py  tools.py
Agent_News_Letter/config/: settings.py
Agent_News_Letter/notifications/: email_sender.py
Agent_News_Letter/scrapers/: arxiv_scraper.py  base.py  huggingface_scraper.py  web_scraper.py
Agent_News_Letter/templates/: email_template.html
autodoc/: __init__.py
autodoc-agent/: README.md
autodoc-agent/autodoc/agents/: llm.py  (+2 more)
autodoc/agents/: __init__.py  clustering_agent.py  orchestrator.py  state.py  synthesizer_agent.py  tools.py
autodoc/clusterer/: clusterer.py  module_tree.py  token_budget.py
autodoc/docgen/: overview_generator.py  prompts.py
autodoc/graph/: graph_builder.py
autodoc/output/: html_generator.py
autodoc/scanner/: __init__.py  language_map.py
autodoc/templates/: viewer.html
llm_benchmark_agent_v1/: .env.example  .gitignore  README.md  app.py  config.py  main.py  requirements.txt
llm_benchmark_agent_v1/agent/: orchestrator.py  tools.py
llm_benchmark_agent_v1/benchmarks/: base.py  classification.py  code_generation.py  conversation.py  financial_analysis.py  knowledge_qa.py  math_bench.py  reasoning.py  registry.py  regulatory_compliance.py  summarization.py  tool_use.py
llm_benchmark_agent_v1/evaluation/: llm_judge.py  scorer.py
llm_benchmark_agent_v1/leaderboard/: public_scores.py
tests/: test_pipeline.py
(+33 files in other folders)
